Исправление мелких ошибок верстки

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,42 +28,42 @@
     </section>
     <ul class="elements">
       <li class="element">
-        <img src="image/kirill-pershin-1088404-unsplash.jpg" alt="" class="element__image">
+        <img src="image/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск" class="element__image">
         <div class="element__info">
           <h2 class="element__title">Карачаевск</h2>
           <button class="element__like"></button>
         </div>
       </li>
       <li class="element">
-        <img src="image/elbrus.png" alt="" class="element__image">
+        <img src="image/elbrus.png" alt="Эльбрус" class="element__image">
         <div class="element__info">
           <h2 class="element__title">Эльбрус</h2>
           <button class="element__like"></button>
         </div>
       </li>
       <li class="element">
-        <img src="image/dombai.png" alt="" class="element__image">
+        <img src="image/dombai.png" alt="Домбай" class="element__image">
         <div class="element__info">
           <h2 class="element__title">Домбай</h2>
           <button class="element__like"></button>
         </div>
       </li>
       <li class="element">
-        <img src="image/elbrus.png" alt="" class="element__image">
+        <img src="image/elbrus.png" alt="Эльбрус" class="element__image">
         <div class="element__info">
           <h2 class="element__title">Эльбрус</h2>
           <button class="element__like"></button>
         </div>
       </li>
       <li class="element">
-        <img src="image/dombai.png" alt="" class="element__image">
+        <img src="image/dombai.png" alt="Домбай" class="element__image">
         <div class="element__info">
           <h2 class="element__title">Домбай</h2>
           <button class="element__like"></button>
         </div>
       </li>
       <li class="element">
-        <img src="image/kirill-pershin-1088404-unsplash.jpg" alt="" class="element__image">
+        <img src="image/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Черкессия" class="element__image">
         <div class="element__info">
           <h2 class="element__title">Карачаево-Черкессия</h2>
           <button class="element__like"></button>
