Добавление alt к изображениям

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body class="page">
   <header class="header">
-    <img src="image/logo.png" alt="" class="header__logo">
+    <img src="image/logo.png" alt="Лого" class="header__logo">
   </header>
   <main class="content">
     <section class="profile">
       <div class="profile__info">
-        <img src="image/profile-avatar.jpg" alt="" class="profile__avatar">
+        <img src="image/profile-avatar.jpg" alt="Аватар" class="profile__avatar">
         <div class="profile__person">
           <div class="profile__edit-block">
             <h1 class="profile__name">Жак Ив Кусто</h1>
