--- a/index.html
+++ b/index.html
@@ -75,13 +75,15 @@
     <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
   </footer>
   <div class="popup">
-    <form class="popup__container">
+    <div class="popup__container">
       <button class="popup__close-button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <input type="text" class="popup__input popup__input_name" value="">
-      <input type="text" class="popup__input popup__input_about" value="">
-      <button class="popup__save-button">Сохранить</button>
-    </form>
+      <form class="popup__container-form">
+        <input type="text" class="popup__input popup__input_name" value="">
+        <input type="text" class="popup__input popup__input_about" value="">
+        <button class="popup__save-button">Сохранить</button>
+      </form>
+    </div>
   </div>
   <script src="script/index.js"></script>
 </body>
