--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="page">
   <header class="header">
-    <img src="image/logo.png" alt="Лого" class="header__logo">
+    <img src="image/logo.svg" alt="Лого" class="header__logo">
   </header>
   <main class="content">
     <section class="profile">
@@ -18,70 +18,72 @@
         <div class="profile__person">
           <div class="profile__edit-block">
             <h1 class="profile__name">Жак Ив Кусто</h1>
-            <button class="profile__edit"></button>
+            <button type="button" class="profile__edit" aria-label="Изменить"></button>
           </div>
           <p class="profile__about">Исследователь океана</p>
         </div>
       </div>
-      <button class="profile__add-button"></button>
+      <button type="button" class="profile__add-button" aria-label="Добавить"></button>
       
     </section>
-    <ul class="elements">
-      <li class="element">
-        <img src="image/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск" class="element__image">
-        <div class="element__info">
-          <h2 class="element__title">Карачаевск</h2>
-          <button class="element__like"></button>
-        </div>
-      </li>
-      <li class="element">
-        <img src="image/elbrus.png" alt="Эльбрус" class="element__image">
-        <div class="element__info">
-          <h2 class="element__title">Эльбрус</h2>
-          <button class="element__like"></button>
-        </div>
-      </li>
-      <li class="element">
-        <img src="image/dombai.png" alt="Домбай" class="element__image">
-        <div class="element__info">
-          <h2 class="element__title">Домбай</h2>
-          <button class="element__like"></button>
-        </div>
-      </li>
-      <li class="element">
-        <img src="image/elbrus.png" alt="Эльбрус" class="element__image">
-        <div class="element__info">
-          <h2 class="element__title">Эльбрус</h2>
-          <button class="element__like"></button>
-        </div>
-      </li>
-      <li class="element">
-        <img src="image/dombai.png" alt="Домбай" class="element__image">
-        <div class="element__info">
-          <h2 class="element__title">Домбай</h2>
-          <button class="element__like"></button>
-        </div>
-      </li>
-      <li class="element">
-        <img src="image/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Черкессия" class="element__image">
-        <div class="element__info">
-          <h2 class="element__title">Карачаево-Черкессия</h2>
-          <button class="element__like"></button>
-        </div>
-      </li> 
-    </ul>
+    <section class="elements">
+      <ul class="elements-list">
+        <li class="element">
+          <img src="image/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск" class="element__image">
+          <div class="element__info">
+            <h2 class="element__title">Карачаевск</h2>
+            <button type="button" class="element__like" aria-label="Лайк"></button>
+          </div>
+        </li>
+        <li class="element">
+          <img src="image/elbrus.png" alt="Эльбрус" class="element__image">
+          <div class="element__info">
+            <h2 class="element__title">Эльбрус</h2>
+            <button type="button" class="element__like" aria-label="Лайк"></button>
+          </div>
+        </li>
+        <li class="element">
+          <img src="image/dombai.png" alt="Домбай" class="element__image">
+          <div class="element__info">
+            <h2 class="element__title">Домбай</h2>
+            <button type="button" class="element__like" aria-label="Лайк"></button>
+          </div>
+        </li>
+        <li class="element">
+          <img src="image/elbrus.png" alt="Эльбрус" class="element__image">
+          <div class="element__info">
+            <h2 class="element__title">Эльбрус</h2>
+            <button type="button" class="element__like" aria-label="Лайк"></button>
+          </div>
+        </li>
+        <li class="element">
+          <img src="image/dombai.png" alt="Домбай" class="element__image">
+          <div class="element__info">
+            <h2 class="element__title">Домбай</h2>
+            <button type="button" class="element__like" aria-label="Лайк"></button>
+          </div>
+        </li>
+        <li class="element">
+          <img src="image/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Черкессия" class="element__image">
+          <div class="element__info">
+            <h2 class="element__title">Карачаево-Черкессия</h2>
+            <button type="button" class="element__like" aria-label="Лайк"></button>
+          </div>
+        </li> 
+      </ul>
+    </section>
   </main>
   <footer class="footer">
     <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
   </footer>
   <div class="popup">
     <div class="popup__container">
-      <button class="popup__close-button"></button>
+      <button type="button" class="popup__close-button" aria-label="Закрыть"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__container-form">
-        <input type="text" class="popup__input popup__input_name" value="">
-        <input type="text" class="popup__input popup__input_about" value="">
-        <button class="popup__save-button">Сохранить</button>
+      <form class="popup__container-form" name="Edit-Form">
+        <input type="text" class="popup__input popup__input_type_name" value="">
+        <input type="text" class="popup__input popup__input_type_about" value="">
+        <button type="submit" class="popup__save-button">Сохранить</button>
       </form>
     </div>
   </div>
