--- a/index.html
+++ b/index.html
@@ -26,51 +26,8 @@
       <button type="button" class="profile__add-button" aria-label="Добавить"></button>
       
     </section>
-    <section class="elements">
-      <ul class="elements-list">
-        <li class="element">
-          <img src="image/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск" class="element__image">
-          <div class="element__info">
-            <h2 class="element__title">Карачаевск</h2>
-            <button type="button" class="element__like" aria-label="Лайк"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img src="image/elbrus.png" alt="Эльбрус" class="element__image">
-          <div class="element__info">
-            <h2 class="element__title">Эльбрус</h2>
-            <button type="button" class="element__like" aria-label="Лайк"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img src="image/dombai.png" alt="Домбай" class="element__image">
-          <div class="element__info">
-            <h2 class="element__title">Домбай</h2>
-            <button type="button" class="element__like" aria-label="Лайк"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img src="image/elbrus.png" alt="Эльбрус" class="element__image">
-          <div class="element__info">
-            <h2 class="element__title">Эльбрус</h2>
-            <button type="button" class="element__like" aria-label="Лайк"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img src="image/dombai.png" alt="Домбай" class="element__image">
-          <div class="element__info">
-            <h2 class="element__title">Домбай</h2>
-            <button type="button" class="element__like" aria-label="Лайк"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img src="image/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Черкессия" class="element__image">
-          <div class="element__info">
-            <h2 class="element__title">Карачаево-Черкессия</h2>
-            <button type="button" class="element__like" aria-label="Лайк"></button>
-          </div>
-        </li> 
-      </ul>
+    <section class="elements" aria-label="Галерея">
+      <ul class="elements-list"></ul>
     </section>
   </main>
   <footer class="footer">
@@ -83,10 +40,42 @@
       <form class="popup__container-form" name="Edit-Form">
         <input type="text" class="popup__input popup__input_type_name" value="">
         <input type="text" class="popup__input popup__input_type_about" value="">
-        <button type="submit" class="popup__save-button">Сохранить</button>
+        <button type="submit" class="popup__button popup__button_type_save">Сохранить</button>
       </form>
     </div>
   </div>
+  <div class="popup popup_type_add-place">
+    <div class="popup__container">
+      <button type="button" class="popup__close-button popup__close-button_pop_add" aria-label="Закрыть"></button>
+      <h2 class="popup__title">Новое место</h2>
+      <form class="popup__container-form popup__container-form_type_add" name="Edit-Form">
+        <input type="text" class="popup__input popup__input_type_place-name" onfocus="this.value=''" value="">
+        <input type="text" class="popup__input popup__input_type_place-link" onfocus="this.value=''" value="">
+        <button type="submit" class="popup__button popup__button_type_create">Создать</button>
+      </form>
+    </div>
+  </div>
+  <div class="popup-image">
+    <div class="popup-image__container">
+      <button type="button" class="popup__close-button" aria-label="Закрыть"></button>
+      <img src="#" alt="Галерея изображений" class="popup-image__image">
+      <p class="popup-image__title"></p>
+    </div>    
+  </div>
+  <template id="card">
+    <li class="element">
+      <button type="submit" class="element__trashbin" aria-label="Удалить"></button>
+      <div class="element__image-container">
+        <a href="" class="element__link">
+          <img src="" alt="" class="element__image">
+        </a>
+      </div>
+      <div class="element__info">
+        <h2 class="element__title"></h2>
+        <button type="submit" class="element__like" aria-label=""></button>
+      </div>
+    </li>
+  </template>
   <script src="script/index.js"></script>
 </body>
 </html>
