Внесение правок после автоматической проверки

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <li class="element">
       <button type="submit" class="element__trashbin" aria-label="Удалить"></button>
       <div class="element__image-container">
-        <a href="" class="element__link">
-          <img src="" alt="" class="element__image">
+        <a href="#" class="element__link">
+          <img src="#" alt="" class="element__image">
         </a>
       </div>
       <div class="element__info">
