Внесение правок после автоматической проверки 2

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </div>
   <div class="popup-image">
     <div class="popup-image__container">
-      <button type="button" class="popup__close-button" aria-label="Закрыть"></button>
+      <button type="button" class="popup-image__close-button" aria-label="Закрыть"></button>
       <img src="#" alt="Галерея изображений" class="popup-image__image">
       <p class="popup-image__title"></p>
     </div>    
