--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <footer class="footer">
     <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
   </footer>
-  <div class="popup">
+  <div class="popup popup_type_profile">
     <div class="popup__container">
       <button type="button" class="popup__close-button" aria-label="Закрыть"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
@@ -49,17 +49,17 @@
       <button type="button" class="popup__close-button popup__close-button_pop_add" aria-label="Закрыть"></button>
       <h2 class="popup__title">Новое место</h2>
       <form class="popup__container-form popup__container-form_type_add" name="Edit-Form">
-        <input type="text" class="popup__input popup__input_type_place-name" onfocus="this.value=''" value="">
-        <input type="text" class="popup__input popup__input_type_place-link" onfocus="this.value=''" value="">
+        <input type="text" class="popup__input popup__input_type_place-name" placeholder="Название">
+        <input type="text" class="popup__input popup__input_type_place-link" placeholder="Ссылка на картинку">
         <button type="submit" class="popup__button popup__button_type_create">Создать</button>
       </form>
     </div>
   </div>
-  <div class="popup-image">
-    <div class="popup-image__container">
-      <button type="button" class="popup-image__close-button" aria-label="Закрыть"></button>
-      <img src="#" alt="Галерея изображений" class="popup-image__image">
-      <p class="popup-image__title"></p>
+  <div class="popup popup_type_image">
+    <div class="popup__container-image">
+      <button type="button" class="popup__close-button" aria-label="Закрыть"></button>
+      <img src="#" alt="Галерея изображений" class="popup__image">
+      <p class="popup__description"></p>
     </div>    
   </div>
   <template id="card">
