Исправлены замечания после ревью 1

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="popup__container">
       <button type="button" class="popup__close-button" aria-label="Закрыть"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__container-form" name="Edit-Form" novalidate>
+      <form class="popup__container-form popup__container-form_type_profile" name="Edit-Form" novalidate>
         <input type="text" id="input-name" class="popup__input popup__input_type_name" value="" required minlength="2" maxlength="40">
         <span class="input-name-error popup__input-error"></span>
         <input type="text" id="input-about" class="popup__input popup__input_type_about" value="" required minlength="2" maxlength="200">
