--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
       </div>
     </li>
   </template>
-  <script src="script/index.js"></script>
-  <script src="script/validate.js"></script>
+  <script src="script/index.js" type="module"></script>
 </body>
 </html>
