ПР7. Исправлены ошибки ревью 2

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="popup__container">
       <button type="button" class="popup__close-button" aria-label="Закрыть"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__container-form popup__container-form_type_profile" name="Edit-Form" novalidate>
+      <form class="popup__container-form popup__container-form_type_profile" name="EditProfile" novalidate>
         <input type="text" id="input-name" class="popup__input popup__input_type_name" value="" required minlength="2" maxlength="40">
         <span class="input-name-error popup__input-error"></span>
         <input type="text" id="input-about" class="popup__input popup__input_type_about" value="" required minlength="2" maxlength="200">
@@ -50,7 +50,7 @@
     <div class="popup__container">
       <button type="button" class="popup__close-button popup__close-button_pop_add" aria-label="Закрыть"></button>
       <h2 class="popup__title">Новое место</h2>
-      <form class="popup__container-form popup__container-form_type_add" name="Edit-Form" novalidate>
+      <form class="popup__container-form popup__container-form_type_add" name="NewPlace" novalidate>
         <input type="text" id="input-place-name" class="popup__input popup__input_type_place-name" placeholder="Название" required minlength="2" maxlength="30">
         <span class="input-place-name-error popup__input-error"></span>
         <input type="url" id="input-place-link" class="popup__input popup__input_type_place-link" placeholder="Ссылка на картинку" required>
