--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="pages/index.css">
   <title>Mesto</title>
 </head>
 <body class="page">
   <header class="header">
-    <img src="image/logo.svg" alt="Лого" class="header__logo">
+    <img src="<%=require('./image/logo.svg')%>" alt="Лого" class="header__logo">
   </header>
   <main class="content">
     <section class="profile">
       <div class="profile__info">
-        <img src="image/profile-avatar.jpg" alt="Аватар" class="profile__avatar">
+        <img src="<%=require('./image/profile-avatar.jpg')%>" alt="Аватар" class="profile__avatar">
         <div class="profile__person">
           <div class="profile__edit-block">
             <h1 class="profile__name">Жак Ив Кусто</h1>
@@ -51,9 +50,9 @@
       <button type="button" class="popup__close-button popup__close-button_pop_add" aria-label="Закрыть"></button>
       <h2 class="popup__title">Новое место</h2>
       <form class="popup__container-form popup__container-form_type_add" name="NewPlace" novalidate>
-        <input type="text" id="input-place-name" class="popup__input popup__input_type_place-name" placeholder="Название" required minlength="2" maxlength="30">
+        <input type="text" id="input-place-name" class="popup__input popup__input_type_place-name" placeholder="Название" required minlength="2" maxlength="30" name="name">
         <span class="input-place-name-error popup__input-error"></span>
-        <input type="url" id="input-place-link" class="popup__input popup__input_type_place-link" placeholder="Ссылка на картинку" required>
+        <input type="url" id="input-place-link" class="popup__input popup__input_type_place-link" placeholder="Ссылка на картинку" required name="link">
         <span class="input-place-link-error popup__input-error"></span>
         <button type="submit" class="popup__button popup__button_type_create">Создать</button>
       </form>
