--- a/src/index.html
+++ b/src/index.html
@@ -37,10 +37,14 @@
       <button type="button" class="popup__close-button" aria-label="Закрыть"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__container-form popup__container-form_type_profile" name="EditProfile" novalidate>
-        <input type="text" id="input-name" class="popup__input popup__input_type_name" value="" required minlength="2" maxlength="40">
-        <span class="input-name-error popup__input-error"></span>
-        <input type="text" id="input-about" class="popup__input popup__input_type_about" value="" required minlength="2" maxlength="200">
-        <span class="input-about-error popup__input-error"></span>
+        <label for="input-name" class="popup__label">
+          <input type="text" id="input-name" class="popup__input popup__input_type_name" value="" required minlength="2" maxlength="40" name="name">
+          <span class="input-name-error popup__input-error"></span>
+        </label>
+        <label for="input-about" class="popup__label">
+          <input type="text" id="input-about" class="popup__input popup__input_type_about" value="" required minlength="2" maxlength="200" name="about">
+          <span class="input-about-error popup__input-error"></span>
+        </label>
         <button type="submit" class="popup__button popup__button_type_save">Сохранить</button>
       </form>
     </div>
@@ -50,10 +54,14 @@
       <button type="button" class="popup__close-button popup__close-button_pop_add" aria-label="Закрыть"></button>
       <h2 class="popup__title">Новое место</h2>
       <form class="popup__container-form popup__container-form_type_add" name="NewPlace" novalidate>
-        <input type="text" id="input-place-name" class="popup__input popup__input_type_place-name" placeholder="Название" required minlength="2" maxlength="30" name="name">
-        <span class="input-place-name-error popup__input-error"></span>
-        <input type="url" id="input-place-link" class="popup__input popup__input_type_place-link" placeholder="Ссылка на картинку" required name="link">
-        <span class="input-place-link-error popup__input-error"></span>
+        <label for="input-place-name" class="popup__label">
+          <input type="text" id="input-place-name" class="popup__input popup__input_type_place-name" placeholder="Название" required minlength="2" maxlength="30" name="name">
+          <span class="input-place-name-error popup__input-error"></span>
+        </label>
+        <label for="input-place-link" class="popup__label">
+          <input type="url" id="input-place-link" class="popup__input popup__input_type_place-link" placeholder="Ссылка на картинку" required name="link">
+          <span class="input-place-link-error popup__input-error"></span>
+        </label>
         <button type="submit" class="popup__button popup__button_type_create">Создать</button>
       </form>
     </div>
