--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,15 @@
   <main class="content">
     <section class="profile">
       <div class="profile__info">
-        <img src="<%=require('./image/profile-avatar.jpg')%>" alt="Аватар" class="profile__avatar">
+        <a href="#" class="profile__avatar-link">
+          <img src="" alt="Аватар" class="profile__avatar">
+        </a>
         <div class="profile__person">
           <div class="profile__edit-block">
-            <h1 class="profile__name">Жак Ив Кусто</h1>
+            <h1 class="profile__name"></h1>
             <button type="button" class="profile__edit" aria-label="Изменить"></button>
           </div>
-          <p class="profile__about">Исследователь океана</p>
+          <p class="profile__about"></p>
         </div>
       </div>
       <button type="button" class="profile__add-button" aria-label="Добавить"></button>
@@ -49,6 +51,19 @@
       </form>
     </div>
   </div>
+  <div class="popup popup_type_avatar">
+    <div class="popup__container">
+      <button type="button" class="popup__close-button" aria-label="Закрыть"></button>
+      <h2 class="popup__title">Обновить аватар</h2>
+      <form class="popup__container-form popup__container-form_type_avatar" name="ChangeAvatar" novalidate>
+        <label for="input-place-link" class="popup__label">
+          <input type="url" id="input-place-link" class="popup__input popup__input_type_place-link" placeholder="Ссылка на картинку" required name="link">
+          <span class="input-place-link-error popup__input-error"></span>
+        </label>
+        <button type="submit" class="popup__button popup__button_type_save">Сохранить</button>
+      </form>
+    </div>
+  </div>
   <div class="popup popup_type_add-place">
     <div class="popup__container">
       <button type="button" class="popup__close-button popup__close-button_pop_add" aria-label="Закрыть"></button>
@@ -64,6 +79,13 @@
         </label>
         <button type="submit" class="popup__button popup__button_type_create">Создать</button>
       </form>
+    </div>
+  </div>
+  <div class="popup popup_type_delete">
+    <div class="popup__container">
+      <button type="button" class="popup__close-button popup__close-button_pop_add" aria-label="Закрыть"></button>
+      <h2 class="popup__title">Вы уверены?</h2>
+      <button type="submit" class="popup__button popup__button_type_delete">Да</button>
     </div>
   </div>
   <div class="popup popup_type_image">
@@ -83,7 +105,10 @@
       </div>
       <div class="element__info">
         <h2 class="element__title"></h2>
-        <button type="submit" class="element__like" aria-label=""></button>
+        <div class="element__like-container">
+          <button type="submit" class="element__like" aria-label=""></button>
+          <p class="element__like-count">0</p>
+        </div>
       </div>
     </li>
   </template>
