--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="profile">
       <div class="profile__info">
         <a href="#" class="profile__avatar-link">
-          <img src="" alt="Аватар" class="profile__avatar">
+          <img src="#" alt="Аватар" class="profile__avatar">
         </a>
         <div class="profile__person">
           <div class="profile__edit-block">
@@ -56,9 +56,9 @@
       <button type="button" class="popup__close-button" aria-label="Закрыть"></button>
       <h2 class="popup__title">Обновить аватар</h2>
       <form class="popup__container-form popup__container-form_type_avatar" name="ChangeAvatar" novalidate>
-        <label for="input-place-link" class="popup__label">
-          <input type="url" id="input-place-link" class="popup__input popup__input_type_place-link" placeholder="Ссылка на картинку" required name="link">
-          <span class="input-place-link-error popup__input-error"></span>
+        <label for="input-avatar" class="popup__label">
+          <input type="url" id="input-avatar" class="popup__input popup__input_type_avatar" placeholder="Ссылка на картинку" required name="link">
+          <span class="input-avatar-error popup__input-error"></span>
         </label>
         <button type="submit" class="popup__button popup__button_type_save">Сохранить</button>
       </form>
